--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -175,7 +175,10 @@
     transform: rotate(45deg);
 }
 .layout .sidebar .menu .menu-item.active > a .menu-title {
-    color: #dee2ec;
+    color: #ffffff;
+}
+.layout .sidebar .menu .menu-item.active{
+    background: #2b2e4a;
 }
 .layout .sidebar .menu .menu-item.active > a::after {
     border-color: #dee2ec;
@@ -460,7 +463,8 @@ a {
     .layout .sidebar-toggler.break-point-xxl {
         display: initial; } }
 .layout.fixed-sidebar {
-    height: 100%; }
+    height: 100%;
+}
 .layout.fixed-sidebar .sidebar {
     height: 100%;
     overflow: auto; }
